structmeta-tests/tests/compile_fail/struct_meta/not_parse.rs
#[derive(structmeta::StructMeta)]
struct Example {
    not_parse: NotParse,
}
struct NotParse;

fn main() {}
